--- a/q/274775.html
+++ b/q/274775.html
@@ -26,18 +26,18 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>nan</td><td>Java 22</td><td>240808T151507Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274807#274807">mastaH</a></td></tr>
-<tr d-ix="1"><td>102</td><td>Fortran GFortran cpp</td><td>240815T140317Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/275000#275000">roblogic</a></td></tr>
-<tr d-ix="2"><td>063</td><td>Rexx Regina</td><td>240815T125517Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274996#274996">int 21h </a></td></tr>
-<tr d-ix="3"><td>047</td><td>Japt</td><td>240808T190204Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274816#274816">Shaggy</a></td></tr>
-<tr d-ix="4"><td>091</td><td>Haskell</td><td>240810T092753Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274884#274884">pxeger</a></td></tr>
-<tr d-ix="5"><td>103</td><td>Python</td><td>240810T091053Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274883#274883">pxeger</a></td></tr>
-<tr d-ix="6"><td>096</td><td>Swift</td><td>240809T175534Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274859#274859">TKDKid10</a></td></tr>
-<tr d-ix="7"><td>063</td><td>JavaScript</td><td>240808T030639Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274781#274781">noodle p</a></td></tr>
-<tr d-ix="8"><td>067</td><td>PowerShell</td><td>240808T070148Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274793#274793">user3141</a></td></tr>
-<tr d-ix="9"><td>145</td><td>Rust</td><td>240809T191202Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274863#274863">DPD-</a></td></tr>
-<tr d-ix="10"><td>058</td><td>gnuplot</td><td>240808T164957Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274809#274809">int 21h </a></td></tr>
-<tr d-ix="11"><td>121</td><td>C MSVC</td><td>240809T171705Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274858#274858">jdt</a></td></tr>
+<tr d-ix="0"><td>118</td><td>C MSVC</td><td>240809T171705Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274858#274858">jdt</a></td></tr>
+<tr d-ix="1"><td>nan</td><td>Java 22</td><td>240808T151507Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274807#274807">mastaH</a></td></tr>
+<tr d-ix="2"><td>102</td><td>Fortran GFortran cpp</td><td>240815T140317Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/275000#275000">roblogic</a></td></tr>
+<tr d-ix="3"><td>063</td><td>Rexx Regina</td><td>240815T125517Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274996#274996">int 21h </a></td></tr>
+<tr d-ix="4"><td>047</td><td>Japt</td><td>240808T190204Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274816#274816">Shaggy</a></td></tr>
+<tr d-ix="5"><td>091</td><td>Haskell</td><td>240810T092753Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274884#274884">pxeger</a></td></tr>
+<tr d-ix="6"><td>103</td><td>Python</td><td>240810T091053Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274883#274883">pxeger</a></td></tr>
+<tr d-ix="7"><td>096</td><td>Swift</td><td>240809T175534Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274859#274859">TKDKid10</a></td></tr>
+<tr d-ix="8"><td>063</td><td>JavaScript</td><td>240808T030639Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274781#274781">noodle p</a></td></tr>
+<tr d-ix="9"><td>067</td><td>PowerShell</td><td>240808T070148Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274793#274793">user3141</a></td></tr>
+<tr d-ix="10"><td>145</td><td>Rust</td><td>240809T191202Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274863#274863">DPD-</a></td></tr>
+<tr d-ix="11"><td>058</td><td>gnuplot</td><td>240808T164957Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274809#274809">int 21h </a></td></tr>
 <tr d-ix="12"><td>087</td><td>Kotlin script mode</td><td>240809T161904Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274855#274855">InSync</a></td></tr>
 <tr d-ix="13"><td>085</td><td>Perl 5</td><td>240809T091532Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274846#274846">Dom Hast</a></td></tr>
 <tr d-ix="14"><td>058</td><td>PARI/GP</td><td>240809T091007Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274845#274845">alephalp</a></td></tr>
@@ -55,7 +55,19 @@
 <tr d-ix="26"><td>061</td><td>Uiua</td><td>240808T025342Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274779#274779">noodle p</a></td></tr>
 <tr d-ix="27"><td>068</td><td>Python</td><td>240808T013510Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274777#274777">Albert.L</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://openjdk.org/projects/jdk/22/" rel="nofollow noreferrer">Java 22</a>, <del>210</del> 159 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://learn.microsoft.com/en-us/cpp/?view=msvc-170" rel="nofollow noreferrer">C (MSVC)</a>, 118 bytes</h1>
+
+<pre class="lang-c prettyprint-override"><code>#define day /##/
+#define x /##/
+#define print(x)puts("24 hours");}
+int main() {
+day = "Monday"
+x = day.length
+print(x)
+</code></pre>
+<p><a href="https://godbolt.org/z/YThYbdnqb" rel="nofollow noreferrer">Try in GodBolt</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://openjdk.org/projects/jdk/22/" rel="nofollow noreferrer">Java 22</a>, <del>210</del> 159 bytes</h1>
 <p>Modified after <a href="https://codegolf.stackexchange.com/users/108687/noodle-person">@noodle person</a> comment</p>
 <pre class="lang-java prettyprint-override"><code>class C{String day,length=&quot;24 hours&quot;;void print(String s){System.out.print(s);}void main(){String x;C day=new C();day.
 day = &quot;Monday&quot;;
@@ -82,7 +94,7 @@ print(x);
 java --enable-preview C
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://gcc.gnu.org/fortran/" rel="nofollow noreferrer">Fortran (GFortran)</a> <code>-cpp</code>, 102 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://gcc.gnu.org/fortran/" rel="nofollow noreferrer">Fortran (GFortran)</a> <code>-cpp</code>, 102 bytes</h1>
 <pre class="lang-fortran prettyprint-override"><code>#define print(x)print*,&quot;24 hours&quot;
 #define x !
 #define day !
@@ -94,7 +106,7 @@ end
 <p><a href="https://tio.run/##S8svKilKzNNNT4Mw/v9XTklNy8xLVSgoyswr0ajQBNNaOkpGJgoZ@aVFxUpcMBUVCopwdkpiJZAHIm0VlHzz84AsJa4KIAfI0MtJzUsvyeCCmciVmpfy//@/5LScxPTi/7rJBQUA" rel="nofollow noreferrer" title="Fortran (GFortran) – Try It Online">Try it online!</a></p>
 <p>Zsh attempt failed - Fortran works though! The <code>-cpp</code> flag allows me to <code>#define</code> away the problematic code. <code>print(x)</code> is a (poorly named) macro that prints the text in a way the compiler understands. The assignments for <code>x =</code> and <code>day =</code> just become comments (<code>!</code>).</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="http://www.rexx.org/" rel="nofollow noreferrer">Rexx (Regina)</a>, 63 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="http://www.rexx.org/" rel="nofollow noreferrer">Rexx (Regina)</a>, 63 bytes</h1>
 <p>Here are two solutions in Rexx. Thanks to its flexible syntax the solutions are quite compact.</p>
 <p>Since Rexx does not have <code>print</code> function/statement, it is defined in both cases within the program.</p>
 <p>In the first and shorter solution (below) the user-defined <code>print</code> function takes no argument (<code>x</code> is ignored), prints the hardcoded string <code>24 hours</code> and stops the execution. No need to care about return statement, which is normally required. Although <code>print</code> is formally a function, the way it is defined it could only run once, which is enough for the task.</p>
@@ -116,14 +128,14 @@ exit
 </code></pre>
 <p><a href="https://tio.run/##K0qtqPj/PyWxUs9WychEISO/tKhYiQvIV7BVUPLNzwOylLgqgByQkpzUvPSSDK6Cosy8Eo0KTQjDqhiouIIrtSKz5P9/AA" rel="nofollow noreferrer" title="Rexx (Regina) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 47 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 47 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>$day = &quot;Monday&quot;
 x = day.length
 print(x)$`24 ÊÀs
 </code></pre>
 <p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=JGRheSA9ICJNb25kYXkiCnggPSBkYXkubGVuZ3RoCnByaW50KHgpJGAyNCDKwHM" rel="nofollow noreferrer">Test it</a></p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a>, 91 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a>, 91 bytes</h1>
 <pre class="lang-haskell prettyprint-override"><code>main=print&quot;24 hours&quot;where{_._=0;length=0;day = &quot;Monday&quot;;
 x = day.length;
 print(x)=putStr x}
@@ -131,7 +143,7 @@ print(x)=putStr x}
 <p><a href="https://ato.pxeger.com/run?1=m708I7E4OzUnZ8GCpaUlaboWN6NzEzPzbAuKMvNKlIxMFDLyS4uKlcozUotSq-P14m0NrHNS89JLMoCMlMRKBVsFJd_8PCBLyZqrAsgDsvQgCqy5wGZoVGjaFpSWBJcUKVTUQqyA2gSzEQA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Thanks to WheatWizard</p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://www.python.org" rel="noreferrer">Python</a>, 103 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://www.python.org" rel="noreferrer">Python</a>, 103 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>import gc
 gc.get_referents(str.__dict__)[0][&quot;length&quot;]=&quot;24 hours&quot;
 day = &quot;Monday&quot;
@@ -141,7 +153,7 @@ print(x)
 <p><a href="https://ato.pxeger.com/run?1=m72soLIkIz9vwYKlpSVpuhY30zNzC_KLShTSk7nSk_XSU0vii1LTUotS80qKNYpLivTi41Myk0vi4zWjDWKjlXJS89JLMpRibZWMTBQy8kuLipW4UhIrFWwVlHzz84AsJa4KIAfI0IMo5Sooyswr0ajQhFgHtRVmOwA" rel="noreferrer">Attempt This Online!</a></p>
 <p>Just for fun - a version with no syntax trickery. Uses implementation-specific behaviour, but works on CPython 3.12.2. <code>str.__dict__</code> is an immutable proxy but it has a hidden reference to the underlying mutable dictionary, which we can access using the <a href="https://docs.python.org/3/library/gc.html" rel="noreferrer"><code>gc</code> module</a>.</p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://www.swift.org/" rel="nofollow noreferrer">Swift</a>, <sup><s>101</s></sup> 96 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://www.swift.org/" rel="nofollow noreferrer">Swift</a>, <sup><s>101</s></sup> 96 bytes</h1>
 <p>Assuming I am allowed to answer my own question...</p>
 <pre class="lang-swift prettyprint-override"><code>extension String{var length:String{&quot;24 hours&quot;}}
 var x=&quot;&quot;,
@@ -151,7 +163,7 @@ print(x)
 </code></pre>
 <p>The Swift compiler on tio.run doesn't support Swift v6.0 implicit returning, but a different one does. <a href="https://www.programiz.com/online-compiler/4eYOwEeaL813Q" rel="nofollow noreferrer">Try it here</a>.</p>
 </div>
-<div id="pu7" class="pu"><h1>JavaScript, 63 bytes</h1>
+<div id="pu8" class="pu"><h1>JavaScript, 63 bytes</h1>
 <p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false">
 <div class="snippet-code">
 <pre class="snippet-code-js lang-js prettyprint-override"><code>print=_=&gt;alert`24 hours`
@@ -163,7 +175,7 @@ print(x)</code></pre>
 </p>
 <p>Now using <code>alert</code> rather than <code>console.log</code>, as suggested by <a href="https://codegolf.stackexchange.com/users/58974/shaggy">Shaggy</a>.</p>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://github.com/TryItOnline/TioSetup/wiki/Powershell" rel="nofollow noreferrer">PowerShell</a>, 67 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="https://github.com/TryItOnline/TioSetup/wiki/Powershell" rel="nofollow noreferrer">PowerShell</a>, 67 bytes</h1>
 
 <pre class="lang-powershell prettyprint-override"><code>filter print{'24 hours'}
 $day = &quot;Monday&quot;
@@ -188,7 +200,7 @@ print(x);
 <p><a href="https://tio.run/##TY2xDsIgFEV3vuKFpWWwg3EqcTCuOmniYBwQXiwJAgFa2zT9diTq4HCTc4d7rncvDLFDY3LeKbU6Tx6h8v3daAnSiBhBzjGJVOrgtAIftE11CYxsPk0x4bPZOxudweYSdMKarjfQuT5EyvjyM/0bVM3mz54PIhAlJtgCPTpbiHIyllaoOaB9pI6T79/IOFmWilzlrW2LIOc3" rel="nofollow noreferrer" title="PowerShell – Try It Online">Try it online!</a></p>
 <p>This takes the original code as C# and compiles it into a class <code>c</code> that can be used by PowerShell. Some further golfing of the C# might be possible ...</p>
 </div>
-<div id="pu9" class="pu"><h1>Rust, 145 bytes</h1>
+<div id="pu10" class="pu"><h1>Rust, 145 bytes</h1>
 <pre class="lang-rs prettyprint-override"><code>macro_rules!x{($a:stmt;$b:tt=$c:expr;$e:stmt)=&gt;{$a;$b=();print!(&quot;24 hours&quot;)}}fn main(){let(day,x);x!{
 day = &quot;Monday&quot;;
 x = day.length;
@@ -202,7 +214,7 @@ x = ();
 print!(&quot;24 hours&quot;)
 </code></pre>
 </div>
-<div id="pu10" class="pu"><h1><a href="http://www.gnuplot.info/" rel="noreferrer">gnuplot</a>, 58 bytes</h1>
+<div id="pu11" class="pu"><h1><a href="http://www.gnuplot.info/" rel="noreferrer">gnuplot</a>, 58 bytes</h1>
 <pre><code>length=&quot;\r24 hours&quot;
 day = &quot;Monday&quot;
 x = day.length
@@ -213,19 +225,6 @@ print(x)
 <p>The dot operator concatenates two strings. This way the string x contains <code>&quot;Monday\r24 hours&quot;</code>. When printing x, first &quot;Monday&quot; appears, then the symbol <code>\r</code> (carriage return without linefeed) moves the cursor to the start of the same line and then printing &quot;24 hours&quot; over the string &quot;Monday&quot; overwrites it.</p>
 <p><a href="https://i.sstatic.net/gY4vz6fI.png" rel="noreferrer"><img src="https://i.sstatic.net/gY4vz6fI.png" alt="enter image description here" /></a></p>
 <p><strong>Edit:</strong> since this answer has received so many upvotes, I have decided to try and print the string <code>&quot;Monday\r24 hours&quot;</code> from the Linux OS. The result in Python can be checked online <a href="https://onlinegdb.com/Fy-zCnfDZ" rel="noreferrer">here</a>.</p>
-</div>
-<div id="pu11" class="pu"><h1><a href="https://learn.microsoft.com/en-us/cpp/?view=msvc-170" rel="nofollow noreferrer">C (MSVC)</a>, 121 bytes</h1>
-
-<pre class="lang-c prettyprint-override"><code>#define day /##/
-#define x /##/
-#define print(x)puts("24 hours");
-int main() {
-&#9;day = "Monday"
-&#9;x = day.length
-&#9;print(x)
-}
-</code></pre>
-<p><a href="https://godbolt.org/z/d355T4jGr" rel="nofollow noreferrer">Try in GodBolt</a></p>
 </div>
 <div id="pu12" class="pu"><h1><a href="https://kotlinlang.org" rel="nofollow noreferrer">Kotlin</a> (script mode), 87 bytes</h1>
 <pre class="lang-kotlin prettyprint-override"><code>val print={_:Int-&gt;print(&quot;24 hours&quot;)}
