--- a/q/235964.html
+++ b/q/235964.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>196</td><td>sed 4.2.2 r</td><td>240711T061548Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/274071#274071">guest430</a></td></tr>
+<tr d-ix="0"><td>193</td><td>sed 4.2.2 r</td><td>240711T061548Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/274071#274071">guest430</a></td></tr>
 <tr d-ix="1"><td>069</td><td>Swift 6</td><td>240907T215801Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/275405#275405">macOSist</a></td></tr>
 <tr d-ix="2"><td>018</td><td>ARBLE</td><td>240903T225838Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/275338#275338">ATaco</a></td></tr>
 <tr d-ix="3"><td>045</td><td>Clojure</td><td>240903T135137Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/275319#275319">NikoNyrh</a></td></tr>
@@ -113,7 +113,7 @@
 <tr d-ix="84"><td>005</td><td>Husk</td><td>211004T081650Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/235966#235966">Dominic </a></td></tr>
 <tr d-ix="85"><td>008</td><td>Charcoal</td><td>211004T081405Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/235965#235965">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a> <code>-r</code>, <sup><sub><sub><sup><sub><s>291</s> <s>287</s> <s>276</s> <s>260</s> <s>255</s> <s>251</s> <s>248</s> <s>240</s> <s>233</s> <s>228</s> <s>226</s> <s>220</s> <s>219</s> <s>212</s> <s>209</s> <s>208</s> <s>207</s></sub></sup></sub></sub></sup> 196 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a> <code>-r</code>, <sup><sub><sub><sup><sub><s>291</s> <s>287</s> <s>276</s> <s>260</s> <s>255</s> <s>251</s> <s>248</s> <s>240</s> <s>233</s> <s>228</s> <s>226</s> <s>220</s> <s>219</s> <s>212</s> <s>209</s> <s>208</s> <s>207</s> <s>196</s></sub></sup></sub></sub></sup> 193 bytes</h1>
 <pre><code>h;G;G
 :;s/.//;x;s/\s.*//
 :a;s/#*/&amp; &amp;/;T;x;s/^##/#/;x;ta
@@ -123,14 +123,34 @@ s/^(#+).#.(#*)#/\2\n\2\n\2&#9;\1/;h;t
 s/.*\n/#/;tc
 :b;s/#*/&amp; &amp;/;T
 :c;s/##$/#/;tb
-s/ ?//g;T;s/&#9;#$//;/&#9;/tc
+s/ //g;s/&#9;#$//;/&#9;/tc
 </code></pre>
-<p><a href="https://tio.run/##TU9BbsIwEDxnX4G0VZQE4bEDpY0d0SN9ADdcJEhQ4BKqxof2803XqYp6sDyzOzuzO5zb0Z7dgL1ZVG9IGR19wZTL1eP66bmC/oOgAaxRMVyIeg1048Vt3ZasUAW4T/n9oAqA7FEwF0hnKdxu6hyYwVEUjhQ5K5aZV9cJnr2Im9tJhO@Z576HjAWhh4znuWKVcZEzfOn735d4A3eZJKoQedyqIXv6n0q2iZQfpu6J7jFSTaQKhwShGW0bZajr@9WszSbem6m8Fnsj6SpXxUYWEKd21GSopCWtvm/v4Xrrh3Hx8QM" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online! (cases 0-4, ~30-45 seconds)</a><br />
-<a href="https://tio.run/##ZZDNTsMwEITP3aeotChKUtVjpy3QuCrH8gC9NVRyQpX@SCkiOYAQr05YB6iicrC84x1/Y2@9e27Tna2xMeP5EwJGSe8wyWQ6u727n0P/laAarDFn2Mb7NVC2e7uyK0pFKsC@yZ7VKgYodVJzjGAYwK67zpYZ7E2NI69Zsdx5tKXUwweh2bVEZBXzKKsg1xqR25BHkWIVchwxsiSrftYgM7D7zqJisftXFZTm/VRKCy/5puvmdImR04GcwmKApmjF82G01p9w8vka7lflotKDmHMsFpeJ5Nos/SxCFS0k2oR5rCIVL@VxknKQzkbLJEcIBOIJRyG4PsFdE1yfcPxPOPlv9Al8TeA@4dRqMpTQhKY0@zq/NIdzVbfj128" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online! (cases 0-5, ~50-75 seconds; more efficient/less elegant footer)</a><br />
-<a href="https://tio.run/##XZDNasMwEITP3acILBhbJhrJ@bVl0mP6ALlFDQgaHOfghNqHltJXr7tKaQk9CM2yM99q1R9fxuroeuzttHxGwmjoHbaYzRfL1bqE@ZWgHmxQMtwQ/QZoxpPbui1VUmrAvcnte60AqoJoVkgmCdzu1jkwg6NpCBRr1iyZJ9eInjwKze1khO@Yc99BYoOUh5TzTLNOWWUMX/ju5zx4C3e6WbQSO2MU4oc1xnwiyA5VK9iAuv5bJRi7iUukOqslY9OgdKbVRqgyq5XO3sgX5EgEEgnn@Mh7Av8n8D3hPBqyVNCM5rSgJa2@LtehvXT9OH39Bg" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online! (cases 0-7, ~15-30 seconds; calculate the powers but don't multiply them together)</a></p>
+<p><a href="https://tio.run/##TY/NTsMwEITP2aeItChKUtUTpz8QOyrH8gC91VRqQ5XSQ4pwDvDymHUQiIPlGe@3O15/fgnmbD32et48I2P09AldL5ar9f1Dg@pXgjy4QsOwY@QroA8Xu7VbMmIVYD/kdl6VAJmjaC6RpRnsbqocmMERGo8UPSuWnifbi04fZZrdSYQbmGdugLSNYg85zwrFKueyYLjaDT8ncRr2MiGqFDz@qiNz@p9KpouW76bqSdA0pngk8gSLBGMXzDUyaNu/lbnSm7hsropWZmuJVoUqN5IuY66hIk01LWj5dXsbX2@DD/P3bw" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online! (cases 0-4, ~30-45 seconds)</a><br />
+<a href="https://tio.run/##ZZDNTsMwEITP8VNUWhTlR/XYaQs0rsqxPEBvDZWcUiXpIUU4BxDi1QnrAFVUDpZ3vONv7HXH5z4/Goedni6fEBIq8Q6dzeaL27v7JdRfCeFACkuC6bxfAVVfm43ZiJylBMwb74WTCSByyzUlCCchzHbo7IlA3tRZ4TVJ4juPpuJ68sA0s@WIoiVKixZ8rWO5jyiNJcmIkphQZEX7s4JCw9SDRSZs9686iLwcp4r84CXdDN2SrROf4hDwEQwCdIeeDR9aKfUJyz93sL@qZJXXbC6xWl3GUSq99oOIZLziXB2ViYxlsuaXcUTNnZ3iMaYIGeIJDRPsmGCvCXZMaP4TTv4PYwJdE2hMOPVKaJGJmZiLxdf5pWvOreunr98" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online! (cases 0-5, ~30-50 seconds; more efficient/less elegant footer)</a><br />
+<a href="https://tio.run/##XZDNasMwEITP3acILBhbJhrJ@bVl0mP6ALlFDQgaHOfghNqHltJXr7tKaQk9CM2yM99q1R9fxuroeuzttHxGwmjoHbaYzRfL1bqE@ZWgHmxQMtwQ/QZoxpPbui1VUmrAvcnte60AqoJoVkgmCdzu1jkwg6NpCBRr1iyZJ9eInjwKze1khO@Yc99BYoOUh5TzTLNOWWUMX/ju5zx4C3e6WbQSO2MU4oc1xnwiyA5VK9iAuv5bJRi7iUukOqslY9OgdKbVRqgyq5XO3sgX5EgEEgnn@Mh7Av8n8D3hPBqyVNCM5rSgJa2@LtehvXT9OH39Bg" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online! (cases 0-7, ~20 seconds; calculate the powers but don't multiply them together)</a></p>
 <p>takes input and output as unary <code>#</code>s. TIO links include conversion to/from decimal in header/footer.</p>
-<p>I'll come back and explain better later, but essentially, I make a loop that multiplies the first line of the PATTERN space by the first line of the HOLD space without killing the rest of the HOLD space. this allows me to store other loop variables and preliminary results on other lines in the HOLD space.</p>
-<p>I finally cleaned up the formatting a bit -- all labels are now at the start of a line and <code>t*</code> jumps to the appropriate label iff a successful swap happened since the last <code>T</code>. it should now be much easier to read even if you don't know much about sed.</p>
+<p>after two months and nearly 100 bytes of golfing, I think it's high time to actually write out an explanation. normally, I add the explanation in comments next to the code, but I think explaining the data format first will work better with this one. the PATTERN and HOLD spaces are switched around a lot, but let's call this the PATTERN space:</p>
+<pre><code>add
+mult
+pow&#9;prev</code></pre>
+<p>each 'variable' is a unary number of <code>#</code>s which keeps track of how many more times we need to preform each operation. the first one used is <code>add</code>, where the <code>b</code> loop adds the HOLD space (which is currently <code>pow</code>) to itself and decrements <code>add</code>. once <code>add</code> is 0 (ie HOLD now equals <code>add * pow</code>), <code>mult</code> gets decremented by one and <code>add</code> is set to HOLD. once <code>mult</code> is 1 (ie HOLD now equals <code>pow ^ pow</code>), <code>pow</code> is decremented, <code>add</code> and <code>mult</code> are set to <code>pow</code>, and <code>prev</code> gets set to <code>HOLD\tprev</code> (where <code>\t</code> is a tab character). once <code>pow</code> is 0, we have calculated <code>n^n</code> for every <code>n</code>, starting at the input and going all the way down to 0, with the results separated by tabs, like this:</p>
+<pre><code>1&#9;4&#9;27&#9;256&#9;3125&#9;...</code></pre>
+<p>the last four lines then add the first entry to itself the last entry number of times, for as long as there are multiple entries. with that explained, here's my attempt at commenting the code itself (some <code>;</code> have been changed to <code>\n</code>s to give room for more explanations):</p>
+<pre><code>h;G;G                                    #set HOLD, add, mult, and pow to input
+:                                        #label UNNAMED (main loop)
+s/.//;x;s/\s.*//                         #set HOLD to add (also decrement add bc off-by-one err)
+:a                                       #label A (add loop)
+s/#*/&amp; &amp;/;T;x;s/^##/#/;x                 #duplicate HOLD with a space in between, decrement add
+ta                                       #jump to A if add > 1
+x;s/#.#//;H;g;s/ ?//g;T                  #remove spaces from HOLD, set add to HOLD, decrement mult
+s/\n##+\n/&amp;/;t                           #jump to UNNAMED if mult > 1
+s/^(#+).#.(#*)#/\2\n\2\n\2&#9;\1/;h;t  #decrement pow & save prev. result & reset add/mult/HOLD & jump to UNNAMED if pow > 0
+s/.*\n/#/;tc                             #remove garbage and jump to C
+:b;s/#*/&amp; &amp;/;T                           #duplicate first entry with a space in between
+:c;s/##$/#/;tb                           #decrement last entry & jump to B if last entry > 1
+s/ //g;s/&#9;#$//                     #delete spaces, delete the now-empty last entry
+/&#9;/tc                              #jump to C if there's more entries
+</code></pre>
 </div>
 <div id="pu1" class="pu"><h1>Swift 6, 69 bytes</h1>
 <pre class="lang-swift prettyprint-override"><code>import Foundation
