--- a/q/17294.html
+++ b/q/17294.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>271</td><td>PowerShell Core</td><td>240912T102603Z</td><td><a href="https://codegolf.stackexchange.com/questions/17294/golfing-a-weasel-program/275483#275483">Julian</a></td></tr>
+<tr d-ix="0"><td>260</td><td>PowerShell Core</td><td>240912T102603Z</td><td><a href="https://codegolf.stackexchange.com/questions/17294/golfing-a-weasel-program/275483#275483">Julian</a></td></tr>
 <tr d-ix="1"><td>201</td><td>Zsh +coreutils</td><td>240831T064219Z</td><td><a href="https://codegolf.stackexchange.com/questions/17294/golfing-a-weasel-program/275276#275276">roblogic</a></td></tr>
 <tr d-ix="2"><td>272</td><td>Python 2</td><td>140103T203204Z</td><td><a href="https://codegolf.stackexchange.com/questions/17294/golfing-a-weasel-program/17370#17370">tecywiz1</a></td></tr>
 <tr d-ix="3"><td>131</td><td>Uiua</td><td>240830T214611Z</td><td><a href="https://codegolf.stackexchange.com/questions/17294/golfing-a-weasel-program/275271#275271">noodle p</a></td></tr>
@@ -74,15 +74,16 @@
 <tr d-ix="45"><td>502</td><td>Lua 5.1</td><td>140105T201056Z</td><td><a href="https://codegolf.stackexchange.com/questions/17294/golfing-a-weasel-program/17656#17656">finnbar</a></td></tr>
 <tr d-ix="46"><td>442</td><td>PHP</td><td>140103T190034Z</td><td><a href="https://codegolf.stackexchange.com/questions/17294/golfing-a-weasel-program/17358#17358">Sammitch</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/PowerShell/PowerShell" rel="nofollow noreferrer">PowerShell Core</a>, 271 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/PowerShell/PowerShell" rel="nofollow noreferrer">PowerShell Core</a>, 260 bytes</h1>
 
-<pre class="lang-powershell prettyprint-override"><code>filter c{-join(0..$_|%{'A'..'Z'+,' '|Get-Random})}filter s{$i=$_
+<pre class="lang-powershell prettyprint-override"><code>$ofs=''
+sal e Get-Random
+filter c{0..$_|%{'A'..'Z'+,' '|e}}filter s{$i=$_
 (0..27|?{$i[$_]-ne&quot;METHINKS IT IS LIKE A WEASEL&quot;[$_]}).Count}$s=27|c
-do{&quot;$(($i++)): $s -- score: $(28-($l=($s|s)))&quot;
-$s=(0..99|%{-join($s|% t*y|%{($_,(c))[!(Get-Random 20)]})}|Sort-Object{$_|s})[0]}while($l)
+do{&quot;$(($i++)): $s -- score: $(28-($l=(&quot;$s&quot;|s)))&quot;
+$s=(0..99|%{,($s|%{,$_*19+(c)|e})}|Sort-Object{&quot;$_&quot;|s})[0]}while($l)
 </code></pre>
-<p><a href="https://tio.run/##RY9hS4RAEIa/@ysmmWN38lbEL3WBhISU3FWQB0FySHkb52FuuBtH6P52Wyno4zszD@8zn@oke32QbStq1ctpem9aI3uoB3FUTcejMMRqXAwsZWHIXliwZMDGW2nE02u3Vx@W7B@hB2wSrLwZiS/GaxdLrHaik/59tr3LH9YF5FvIC9jk6wxSeM7SItv485Gl8EZ9dcaiThxbe3s1@Mg5NkFAdAWoQQjQs6ELPL4UHNuEox41Efmew@ba1cqZ/nq71QLM@bcbcKyWvCYqz/i/N8QRuVo7Fqo34vHtKGszuE@1pTLa2dOhaaXroGn6AQ" rel="nofollow noreferrer" title="PowerShell Core – Try It Online">Try it online!</a></p>
-<p>Times out on TIO, creating lots of ranges is rather inefficient.</p>
+<p><a href="https://tio.run/##LY5RS8MwFIXf@ysu4UoSu5S5F1ehSJGiZXOCHQwcI8wsY5XYSFPZQ5vfXlPw6XLg@849P/aqW3fRxghlWz2OaM8uozRyRwMannUn3o/NyX5H59p0ugXVz5ME5XDT05wmCf2g8YwCHbT3/4Trsc5QRiyAi/vhMcQ9yoNoNHktti/lZlVBuYWygnW5KiCHXZFXxZpMkOfJk/1tOo8uC66KTrYnyBjWccz5A6ADIcBNU0Ngi6VgaDJG0JHBcc5JFMTpcZqGhTOGbjoob@/SmCkeVnI/VLbtxNvnl1ZdKJfB9Hw/P/jrpTY69PFx/AM" rel="nofollow noreferrer" title="PowerShell Core – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a> +coreutils, <sub><s>260</s></sub> <sub><s>235</s></sub> <sub><s>215</s></sub> <sub><s>209</s></sub> 201 bytes</h1>
 <pre class="lang-sh prettyprint-override"><code>p()jot -cr $1 @ Z;T=METHINKS@IT@IS@LIKE@A@WEASEL;S=(`p 28`)
