--- a/q/275493.html
+++ b/q/275493.html
@@ -26,9 +26,15 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>021</td><td>JavaScript V8</td><td>240913T061528Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275495#275495">Arnauld</a></td></tr>
+<tr d-ix="0"><td>021</td><td>PARI/GP</td><td>240913T062831Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275496#275496">alephalp</a></td></tr>
+<tr d-ix="1"><td>021</td><td>JavaScript V8</td><td>240913T061528Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275495#275495">Arnauld</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 21 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://pari.math.u-bordeaux.fr" rel="nofollow noreferrer">PARI/GP</a>, 21 bytes</h1>
+<pre><code>f(x)=t-&gt;print(x);f(t)
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m728ILEoMz69YMGCpaUlaboWW9M0KjRtS3TtCooy80qAbOs0jRJNiNz-RAVbhTQNQ02uJCAjUcNIkysZyEjSMAYyNEygqmAmAQA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 21 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=s=&gt;x=&gt;f(x,print(s))
 </code></pre>
